--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -30,7 +30,7 @@ status-website:
   logoUrl: https://twk.cl/wp-content/uploads/2021/04/logo-cft-teodoro-wickel-acreditado.svg
   name: Upptime TWK
   introTitle: "Reportes de Estados de Sistemas **TWK**"
-  introMessage: Intervalor: 5 minutos para sistemas Bettersoft
+  introMessage: Intervalo de 5 minutos para sistemas Bettersoft
   navbar:
     - title: Status
       href: /
