Actualiza nuevos Sitios
Actualiza AVEA

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -24,7 +24,7 @@ sites:
   - name: CRM xACADEMI
     url: https://crm.xacademi.com/
   - name: AVEA
-    url: https://avea.cl/
+    url: https://avea.cl/intranet.php?acceso=admin
   - name: Campus xACADEMI
     url: https://campus.xacademi.com/
 
@@ -37,7 +37,7 @@ status-website:
   logoUrl: https://twk.cl/wp-content/uploads/2021/04/logo-cft-teodoro-wickel-acreditado.svg
   name: Upptime TWK
   introTitle: "Reportes de Estados de Sistemas **TWK**"
-  introMessage: Intervalo de 5 minutos para sistemas Bettersoft
+  introMessage: Intervalo de verificación: 5 minutos
   navbar:
     - title: Status
       href: /
